# StlViewer

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  main.cpp  main.nut  mesh_loader.cpp  mesh_loader.h  run.sh  shader_utils.cpp  shader_utils.h  sqgipkg.json
.github/workflows/: release.yml
examples/: cube.stl
native/: build.sh  meson.build  meson_options.txt  stl-viewer-gl-area.c  stl-viewer-gl-area.h
shaders/: fs_mesh.sc
